// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. red article flag 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginTop": -5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 2.5,
        "height": 5,
        "width": 5,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "TimesDigitalW04-RegularSC",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0.6,
        "lineHeight": 12,
        "marginLeft": 5,
        "marginTop": 5,
      }
    }
  >
    coloured red
  </Text>
</View>
`;

exports[`2. multiple article flags 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3C81BE",
            "borderRadius": 2.5,
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#3C81BE",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.6,
            "lineHeight": 12,
            "marginLeft": 5,
            "marginTop": 5,
          }
        }
      >
        updated
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#C51D24",
            "borderRadius": 2.5,
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#C51D24",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.6,
            "lineHeight": 12,
            "marginLeft": 5,
            "marginTop": 5,
          }
        }
      >
        exclusive
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#E34605",
            "borderRadius": 2.5,
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#E34605",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.6,
            "lineHeight": 12,
            "marginLeft": 5,
            "marginTop": 5,
          }
        }
      >
        new
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#4D4D4D",
            "borderRadius": 2.5,
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#4D4D4D",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.6,
            "lineHeight": 12,
            "marginLeft": 5,
            "marginTop": 5,
          }
        }
      >
        sponsored
      </Text>
    </View>
  </View>
</View>
`;
